Name:                memoise
Version:             0.7
License:             BSD3
Author:              Ryan Trinkle
Maintainer:          ryan.trinkle@gmail.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2
Synopsis:            The world's laziest hyperlink shortener
Description:
  memoi.se is a URL shortener built in Haskell with the Snap framework

Executable memoise
  Hs-source-dirs: src
  Main-is: Main.hs
  Build-depends: base                      >= 4        && < 5
               , snap                      >= 0.12     && < 0.13
               , snap-core                 >= 0.9      && < 0.10
               , heist                     >= 0.12     && < 0.13
               , lens                      >= 3.9      && < 3.10
               , text                      >= 0.11     && < 0.12
  GHC-options: -threaded -O2
  Extensions: OverloadedStrings
            , TemplateHaskell
