Name:                memoise
Version:             0.8
License:             BSD3
Author:              Ryan Trinkle
Maintainer:          ryan.trinkle@gmail.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2
Synopsis:            The world's laziest hyperlink shortener
Description:
  memoi.se is a URL shortener built in Haskell with the Snap framework

Executable memoise
  Hs-source-dirs: src
  Main-is: Main.hs
  Build-depends: base                      >= 4        && < 5
               , snap                      >= 0.12     
               , snap-core                 >= 0.9      && < 0.10
               , snap-extras               >= 0.6      
               , heist                     >= 0.12     
               , lens                      >= 3.9      
               , text                      >= 0.11     
               , snaplet-postgresql-simple >= 0.4      
               , mtl            
  GHC-options: -threaded -O2
  Extensions: OverloadedStrings
            , TemplateHaskell
            , FlexibleInstances
